[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Ufo.gd" type="Script" id=1]
[ext_resource path="res://Assets/ufo.png" type="Texture" id=2]
[ext_resource path="res://Assets/saucerSmall.wav" type="AudioStream" id=3]

[node name="Ufo" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 16.4386, -19.2035, 22.2765, -7.05442, 33.3211, 4.93688, 11.3896, 19.926, -12.7507, 19.4527, -34.0511, 6.04134, -15.1174, -18.4146, -14.4863, -19.2035, -14.4863, -19.0457 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Shot_Timer" type="Timer" parent="."]

[node name="ufo_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Shot_Timer" to="." method="_on_Shot_Timer_timeout"]
